RESOLVED FIXED215904
Fix AudioParam.linearRampToValueAtTime() formula to match specification
https://bugs.webkit.org/show_bug.cgi?id=215904
Summary Fix AudioParam.linearRampToValueAtTime() formula to match specification
Chris Dumez
Reported 2020-08-27 15:51:35 PDT
Fix AudioParam.linearRampToValueAtTime() formula to match specification: - https://www.w3.org/TR/webaudio/#dom-audioparam-linearramptovalueattime
Attachments
Patch (79.59 KB, patch)
2020-08-27 15:58 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-08-27 15:58:20 PDT
EWS
Comment 2 2020-08-27 16:43:39 PDT
Committed r266261: <https://trac.webkit.org/changeset/266261> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407430 [details].
Radar WebKit Bug Importer
Comment 3 2020-08-27 16:44:15 PDT
Note You need to log in before you can comment on or make changes to this bug.