Fix AudioParam.linearRampToValueAtTime() formula to match specification https://bugs.webkit.org/show_bug.cgi?id=215904

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing or now that they keep passing/failing with
slightly different values.

* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/audioparam-linearRampToValueAtTime-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-audiobuffersource-connections-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-dynamics-compressor-connections-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-panner-connections-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-panner-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/retrospective-linearRampToValueAtTime-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-biquadfilternode-interface/biquad-automation-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/panner-automation-position-expected.txt:

Source/WebCore:

Fix AudioParam.linearRampToValueAtTime() formula to match specification:
- https://www.w3.org/TR/webaudio/#dom-audioparam-linearramptovalueattime

We were using a different formula to compute the value and this was causing us
to fail some web platform tests.

No new tests, rebaselined existing tests.

* Modules/webaudio/AudioParamTimeline.cpp:
(WebCore::AudioParamTimeline::valuesForTimeRangeImpl):


Canonical link: https://commits.webkit.org/228711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266261 268f45cc-cd09-0410-ab3c-d52691b4dbfc